# xet-core

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: ci.yml  hf-xet-tests.yml  pre-release-testing.yml  release.yml
cache/: Cargo.toml
cache/src/: error.rs  lib.rs  xorb_cache.rs
cache/src/disk/: size_bound.rs  storage.rs
cas_client/: Cargo.toml  README.md
cas_client/src/: auth.rs  caching_client.rs  data_transport.rs  download_utils.rs  error.rs  global_dedup_table.rs  http_client.rs  http_shard_client.rs  interface.rs  lib.rs  local_client.rs  local_shard_client.rs  remote_client.rs  staging_client.rs  util.rs
cas_object/: Cargo.toml
cas_object/benches/: bg_split_regroup_bench.rs  compression_bench.rs
cas_object/src/: cas_chunk_format.rs  cas_object_format.rs  chunk_verification.rs  compression_scheme.rs  error.rs  lib.rs  validate_xorb_stream.rs
cas_object/src/byte_grouping/: bg4.rs  mod.rs
cas_object/src/byte_grouping/compression_stats/: collect_compression_stats.rs  compression_prediction_tests.py
cas_object/src/cas_chunk_format/: async_deserialize.rs  deserialize_async.rs
cas_types/: Cargo.toml
cas_types/src/: compression_scheme.rs  error.rs  key.rs  lib.rs
chunk_cache/: Cargo.toml
chunk_cache/src/: cache_manager.rs  disk.rs  error.rs  lib.rs
chunk_cache/src/disk/: cache_file_header.rs  cache_item.rs  test_utils.rs
chunk_cache_bench/: Cargo.toml
chunk_cache_bench/benches/: cache_bench.rs  results.md
chunk_cache_bench/src/: lib.rs  sccache.rs  solid_cache.rs
data/: Cargo.toml
data/src/: cas_interface.rs  chunking.rs  clean.rs  configurations.rs  constants.rs  data_aggregator.rs  data_client.rs  data_processing.rs  deduplication_interface.rs  errors.rs  file_cleaner.rs  file_downloader.rs  file_upload_session.rs  lib.rs  metrics.rs  parallel_xorb_uploader.rs  pointer_file.rs  prometheus_metrics.rs  remote_client_interface.rs  remote_shard_interface.rs  repo_salt.rs  sha256.rs  shard_interface.rs  small_file_determination.rs
data/src/migration_tool/: hub_client.rs  migrate.rs  mod.rs
data/src/test_utils/: local_test_client.rs  mod.rs
data/tests/: integration_tests.rs  test_clean_smudge.rs
data/tests/integration_tests/: initialize.sh  test_basic_clean_smudge.sh
deduplication/: Cargo.toml
deduplication/src/: chunking.rs  constants.rs  data_aggregator.rs  dedup_metrics.rs  defrag_prevention.rs  file_deduplication.rs  interface.rs  lib.rs  raw_xorb_data.rs
error_printer/: Cargo.toml
error_printer/src/: lib.rs
error_printer/tests/: test_error.rs  test_option.rs
file_utils/: Cargo.toml
file_utils/src/: file_metadata.rs  lib.rs  privilege_context.rs  safe_file_creator.rs
hf_xet/: Cargo.toml  README.md  pyproject.toml
hf_xet/src/: config.rs  data_client.rs  lib.rs  log.rs  log_buffer.rs  profiling.rs  progress_update.rs  runtime.rs  token_refresh.rs
mdb_shard/: Cargo.toml
mdb_shard/src/: cas_structs.rs  chunk_verification.rs  constants.rs  error.rs  file_structs.rs  interpolation_search.rs  lib.rs  session_directory.rs  set_operations.rs  shard_benchmark.rs  shard_dedup_probe.rs  shard_file_handle.rs  shard_file_manager.rs  shard_file_reconstructor.rs  shard_format.rs  shard_in_memory.rs  streaming_shard.rs  utils.rs
merkledb/: Cargo.toml
merkledb/benches/: rolling_hash_benchmark.rs
merkledb/src/: aggregate_hashes.rs  async_chunk_iterator.rs  chunk_iterator.rs  constants.rs  error.rs  internal_methods.rs  lib.rs  merkledb_debug.rs  merkledb_highlevel_v1.rs  merkledb_ingestion_v1.rs  merkledb_reconstruction.rs  merkledbbase.rs  merkledbv1.rs  merkledbv2.rs  merklememdb.rs  merklenode.rs  tests.rs
merklehash/: Cargo.toml
merklehash/src/: data_hash.rs
parutils/: Cargo.toml
parutils/src/: async_iterator.rs  lib.rs  parallel_utils.rs
progress_reporting/: Cargo.toml
progress_reporting/src/: data_progress.rs  main.rs  writer_with_reporting.rs
rust/cas_client/: Cargo.toml
rust/gitxetcore/src/: command.rs
rust/gitxetcore/src/command/: dir_summary.rs
rust/merkledb/: Cargo.toml
rust/retry_strategy/: Cargo.toml
rust/shard_client/: Cargo.toml
shard_client/: Cargo.toml
shard_client/src/: error.rs  http_shard_client.rs  lib.rs  local_shard_client.rs
utils/: Cargo.toml  build.rs
utils/examples/: infra.rs
utils/src/: async_read.rs  auth.rs  consistenthash.rs  constant_declarations.rs  errors.rs  lib.rs  limited_joinset.rs  output_bytes.rs  progress.rs  serialization_utils.rs  singleflight.rs  threadpool.rs  version.rs
xet_error/: Cargo.toml  build.rs
xet_error/impl/src/: ast.rs  attr.rs  expand.rs  fmt.rs  generics.rs  lib.rs  prop.rs  valid.rs
xet_error/src/: lib.rs
xet_error/tests/: test_backtrace.rs  test_display.rs  test_error.rs  test_expr.rs  test_from.rs  test_generics.rs  test_lints.rs  test_option.rs  test_path.rs  test_source.rs  test_transparent.rs
xet_threadpool/: Cargo.toml
xet_threadpool/src/: errors.rs  lib.rs  threadpool.rs
