[workspace]
resolver = "2"

members = [
    "cas_client",
    "cas_object",
    "cas_types",
    "data",
    "error_printer",
    "file_utils",
    "merklehash",
    "mdb_shard",
    "parutils",
    "progress_reporting",
    "utils",
    "xet_error",
    "cas_object",
    "cas_types",
    "chunk_cache",
    "chunk_cache_bench",
]

exclude = ["hf_xet"]

[profile.release]
opt-level = 3
lto = true
debug = 1

[profile.opt-test]
inherits = "dev"
opt-level = 1
debug = 1
