[package]
name = "cas_client"
version = "0.14.5"
edition = "2021"

[features]
strict = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cas_types = { version = "0.1.0", path = "../cas_types" }
cas_object = { path = "../cas_object" }
chunk_cache = { path = "../chunk_cache" }
error_printer = { path = "../error_printer" }
file_utils = { path = "../file_utils" }
utils = { path = "../utils" }
merkledb = { path = "../merkledb" }
mdb_shard = { path = "../mdb_shard" }
merklehash = { path = "../merklehash" }
xet_threadpool = { path = "../xet_threadpool" }
thiserror = "2.0"
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1.9"
anyhow = "1"
http = "1.1.0"
tempfile = "3.13.0"
tracing = "0.1.31"
bytes = "1"
itertools = "0.10"
reqwest = { version = "0.12.7", features = ["json", "stream"] }
reqwest-middleware = "0.3.3"
url = "2.5.2"
reqwest-retry = "0.6.1"
heed = "0.11"
futures = "0.3.31"

[dev-dependencies]
rand = "0.8.5"
httpmock = "0.7.0"
tracing-test = { version = "0.2.5", features = ["no-env-filter"] }
