[package]
name = "cas_object"
version = "0.1.0"
edition = "2021"

[dependencies]
xet_error = { path = "../xet_error" }
merkledb = { path = "../merkledb" }
merklehash = { path = "../merklehash" }
anyhow = "1.0.88"
tracing = "0.1.40"
lz4_flex = "0.11.3"
bytes = "1.7.2"
rand = "0.8.5"
blake3 = "1.5.4"
