[package]
name = "cas_object"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0"
error_printer = { path = "../error_printer" }
merkledb = { path = "../merkledb" }
merklehash = { path = "../merklehash" }
anyhow = "1.0.88"
tracing = "0.1.40"
lz4_flex = "0.11.3"
bytes = "1.7.2"
rand = "0.8.5"
blake3 = "1.5.4"
futures = { version = "0.3.31" }
tokio-util = {version = "0.7.12",  features = ["io"]}
tokio = {version = "1.41.1" }

