[package]
name = "cas_object"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "compression_bench"
harness = false
bench = true

[[bench]]
name = "bg_split_regroup_bench"
harness = false
bench = true

[dependencies]
thiserror = "2.0"
error_printer = { path = "../error_printer" }
merkledb = { path = "../merkledb" }
merklehash = { path = "../merklehash" }
mdb_shard = { path = "../mdb_shard" }
utils = { path = "../utils" }
parutils = { path = "../parutils" }
anyhow = "1.0.88"
tracing = "0.1.40"
lz4_flex = "0.11.3"
bytes = "1.7.2"
rand = "0.8.5"
blake3 = "1.5.4"
futures = { version = "0.3.31" }
tokio-util = { version = "0.7.12", features = ["io"] }
tokio = { version = "1.41.1" }
half = "2.4.1"
serde = { version = "1.0.129", features = ["derive"] }
countio = { version = "0.2.19", features = ["futures"] }
clap = { version = "4.1", features = ["derive"] }
csv = "1.1"
more-asserts = "0.3.1"

[[bin]]
path = "src/byte_grouping/compression_stats/collect_compression_stats.rs"
name = "collect_compression_stats"
