[package]
name = "chunk_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
cas_types = { path = "../cas_types" }
merklehash = { path = "../merklehash" }
xet_error = { path = "../xet_error" }
error_printer = { path = "../error_printer" }
file_utils = { path = "../file_utils" }
utils = { path = "../utils" }
blake3 = "1.5.4"
base64 = "0.22.1"
tracing = "0.1.40"
sorted-vec = "0.8.3"
rand = "0.8"
tempdir = "0.3.7"

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
