[package]
name = "chunk_cache"
version = "0.1.0"
edition = "2021"

[dependencies]
cas_types = { path = "../cas_types" }
merklehash = { path = "../merklehash" }
xet_error = { path = "../xet_error" }
error_printer = { path = "../error_printer" }
file_utils = { path = "../file_utils" }
utils = { path = "../utils" }
blake3 = "1.5.4"
base64 = "0.22.1"
tracing = "0.1.40"
rand = "0.8.5"
mockall = "0.13.0"
clap = { version = "4.5.20", optional = true, features = ["derive"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
tempdir = "0.3.7"

[[bin]]
name = "cache_analysis"
path = "./src/bin/analysis.rs"
required-features = ["analysis"]


[features]
analysis = ["dep:clap"]
