[package]
name = "data"
version = "0.14.5"
edition = "2021"

[lib]
doctest = false

[[bin]]
name = "x"
path = "src/bin/example.rs"

[dependencies]
cas_client = { path = "../cas_client" }
cas_object = { path = "../cas_object" }
merkledb = { path = "../merkledb" }
merklehash = { path = "../merklehash" }
mdb_shard = { path = "../mdb_shard" }
utils = { path = "../utils" }
parutils = { path = "../parutils" }
file_utils = { path = "../file_utils" }
error_printer = { path = "../error_printer" }
xet_error = { path = "../xet_error" }
tokio = { version = "1.36", features = ["full"] }
anyhow = "1"
tracing = "0.1.*"
async-trait = "0.1.53"
clap = { version = "3.1.6", features = ["derive"] }
http = "0.2.8"
tempfile = "3.2.0"
regex = "1.5.6"
lazy_static = "1.4.0"
rand = "0.8.5"
lru = "0.12"
toml = "0.5"
lz4 = "1.24.0"
static_assertions = "1.1.0"
gearhash = "0.1.3"
rand_chacha = "0.3.1"

# metrics
prometheus = "0.13.0"

# Other hashers for migration
hashers = "1.0.1"

# Need to specify this as optional to allow the openssl/vendored option below
openssl = { version = "0.10", features = [], optional = true }
glob = "0.3.1"
reqwest-middleware = "0.3.3"

[target.'cfg(not(windows))'.dependencies]
openssl = "0.10"

# use embedded webpki root certs for MacOS as native certs take a very long time
# to load, which affects startup time significantly
[target.'cfg(macos)'.dependencies]
reqwest = { version = "0.11.4", features = ["json", "webpki-roots"] }

[target.'cfg(not(macos))'.dependencies]
reqwest = { version = "0.11.4", features = ["json"] }

[dev-dependencies]

[features]
strict = []
expensive_tests = []
openssl_vendored = ["openssl/vendored"]
