[package]
name = "data"
version = "0.14.5"
edition = "2021"

[lib]
doctest = false

[[bin]]
name = "x"
path = "src/bin/example.rs"

[[bin]]
name = "xtool"
path = "src/bin/xtool.rs"

[dependencies]
cas_client = { path = "../cas_client" }
cas_object = { path = "../cas_object" }
cas_types = { path = "../cas_types" }
merkledb = { path = "../merkledb" }
merklehash = { path = "../merklehash" }
mdb_shard = { path = "../mdb_shard" }
utils = { path = "../utils" }
parutils = { path = "../parutils" }
file_utils = { path = "../file_utils" }
error_printer = { path = "../error_printer" }
xet_threadpool = { path = "../xet_threadpool" }
deduplication = { path = "../deduplication" }
thiserror = "2.0"
tokio = { version = "1.36", features = ["full"] }
anyhow = "1"
tracing = "0.1.*"
async-trait = "0.1.53"
clap = { version = "3.1.6", features = ["derive"] }
http = "0.2.8"
tempfile = "3.2.0"
regex = "1.5.6"
lazy_static = "1.4.0"
rand = "0.8.5"
toml = "0.5"
static_assertions = "1.1.0"
rand_chacha = "0.3.1"
dirs = "5.0.1"
walkdir = "2.5.0"
more-asserts = "0.3.1"
countio = { version = "0.2.19", features = ["futures"] }

# metrics
prometheus = "0.13.0"
jsonwebtoken = "9.3.0"
serde_json = "1.0.133"

# Other hashers for migration
hashers = "1.0.1"

# Need to specify this as optional to allow the openssl/vendored option below
openssl = { version = "0.10", features = [], optional = true }
glob = "0.3.1"
reqwest-middleware = "0.3.3"
chrono = "0.4.39"

[target.'cfg(not(windows))'.dependencies]
openssl = "0.10"

# use embedded webpki root certs for MacOS as native certs take a very long time
# to load, which affects startup time significantly
[target.'cfg(macos)'.dependencies]
reqwest = { version = "0.11.4", features = ["json", "webpki-roots"] }

[target.'cfg(not(macos))'.dependencies]
reqwest = { version = "0.11.4", features = ["json"] }

# Windows doesn't support assembly for compilation
[target.'cfg(not(target_os = "windows"))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[target.'cfg(target_os = "windows")'.dependencies]
sha2 = { version = "0.10.8" }

[dev-dependencies]
serial_test = "3.2.0"

[features]
strict = []
expensive_tests = []
openssl_vendored = ["openssl/vendored"]
