[package]
name = "deduplication"
version = "0.14.5"
edition = "2021"

[dependencies]
gearhash = "0.1.3"
merklehash = { path = "../merklehash" }
mdb_shard = { path = "../mdb_shard" }
merkledb = { path = "../merkledb" }
utils = { path = "../utils" }
more-asserts = "0.3.1"
async-trait = "0.1.53"
lazy_static = "1.4.0"

[dev-dependencies]
rand = "0.9.0"
