[package]
name = "hf_xet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hf_xet"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = ["extension-module", "abi3-py37", "auto-initialize"] }

error_printer = { path = "../error_printer" }
data = { path = "../data" }
utils = { path = "../utils" }
tokio = { version = "1.36", features = ["full"] }
parutils = { path = "../parutils" }
tracing = "0.1.*"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "tracing-log",
    "env-filter",
] }
bipbuffer = "0.1"
reqwest = "0.11.27"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
