[package]
name = "hf_xet"
version = "0.1.4"
edition = "2021"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "hf_xet"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.3", features = [
    "extension-module",
    "abi3-py37",
    "auto-initialize",
] }

error_printer = { path = "../error_printer" }
data = { path = "../data" }
utils = { path = "../utils" }
xet_threadpool = { path = "../xet_threadpool" }
tokio = { version = "1.36", features = ["full"] }
parutils = { path = "../parutils" }
tracing = "0.1.*"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "tracing-log",
    "env-filter",
] }
bipbuffer = "0.1"
reqwest = "0.11.27"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
lazy_static = "1.5"
chrono = "0.4"

pprof = { version = "0.14", features = [
    "flamegraph",
    "prost",
    "protobuf-codec",
], optional = true }
async-trait = "0.1.87"

# Unix-specific dependencies
[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

# Windows-specific dependencies
[target.'cfg(windows)'.dependencies]
ctrlc = "3.4"

[features]
openssl_vendored = ["data/openssl_vendored"]
profiling = ["pprof"]

[profile.release]
debug = true
opt-level = 3
