[package]
name = "mdb_shard"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
merklehash = { path = "../merklehash" }
thiserror = "2.0"
utils = { path = "../utils" }
tempdir = "0.3.7"
tokio = { version = "1.36", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.5"
tracing = "0.1.*"
uuid = { version = "1.3.2", features = ["v4"] }
clap = { version = "3.1.6", features = ["derive"] }
anyhow = "1"
rand = { version = "0.8.5", features = ["small_rng"] }
async-trait = "0.1.9"
static_assertions = "1.1.0"
itertools = "0.13.0"
futures-io = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
blake3 = "1.5.4"

[[bin]]
name = "shard_benchmark"
path = "src/shard_benchmark.rs"
