[package]
name = "merklehash"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
blake3 = "1.5.1"
safe-transmute = "0.11.2"
serde = { version = "1.0.129", features = ["derive"] }
heed = "0.11"

[features]
strict = []
