[package]
name = "merklehash"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
blake3 = "1.5.1"
safe-transmute = "0.11.2"
serde = { version = "1.0.129", features = ["derive"] }
base64 = "0.22.1"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
heed = "0.11"

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }

[features]
strict = []
