[package]
name = "parutils"
version = "0.14.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36", features = ["full"] }
async-scoped = { version = "0.7", features = ["use-tokio"] }
futures = "0.3.28"
async-trait = "0.1.53"
len-trait = "0.6.1"

[dev-dependencies]
anyhow = "1"
more-asserts = "0.3.*"

[features]
strict = []
