[package]
name = "utils"
version = "0.14.5"
edition = "2021"

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
merklehash = { path = "../merklehash" }
xet_error = { path = "../xet_error" }
futures = "0.3.28"

# singleflight
tokio = { version = "1", features = ["sync"] }
parking_lot = "0.11"
pin-project = "1.0.12"

# consistenthash
tracing = "0.1.31"


[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }

[features]
strict = []
