[package]
name = "utils"
version = "0.14.5"
edition = "2021"

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
merklehash = { path = "../merklehash" }
xet_threadpool = { path = "../xet_threadpool" }
thiserror = "2.0"
futures = "0.3.28"
lazy_static = "1.4.0"
paste = "0.1"
ctor = "0.1"

# singleflight & threadpool
tokio = { version = "1.41", features = ["full"] }
parking_lot = "0.11"
pin-project = "1.0.12"

# consistenthash
tracing = "0.1.31"
bytes = "1.8.0"
async-trait = "0.1.87"


[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
tempfile = "3.14.0"

[features]
strict = []
