[package]
name = "xet_threadpool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.44", features = ["sync", "macros", "io-util", "rt", "time"] }
thiserror = "2.0"
tracing = "0.1.31"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
tokio = { version = "1.44", features = ["rt-multi-thread"] }
